# multithreading

./: .gitignore  README.md  pyproject.toml
src/multithreading/: pool.py
tests/: test_multithreading.py
