[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.build-system.sdist]
format = ["sdist", "wheel"]

[tool.setuptools]
include-package-data = true

[project]
name = "multithreading"
version = "0.1.0"
authors = [
    { name = "David Christie", email = "david.christiea@gmail.com" }
]
maintainers = [
    { name = "David Christie" }
]
description = "A pure python implementation of a ThreadPool for multiprocessing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/DavidAChris/multithreading"